# gpui-mobile

./: .gitignore  Cargo.toml  LICENSE-MIT  PACKAGES-TO-IMPL.md  PROGRESS.md  README.md  TODO.md  patch.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
crates/collections/: Cargo.toml
crates/gpui_util/: Cargo.toml
crates/gpui_wgpu/: Cargo.toml
crates/gpui_wgpu/src/: cosmic_text_system.rs  wgpu_atlas.rs  wgpu_renderer.rs
example/: Cargo.toml  build.bat  build.sh
example/android/gradle/: build.gradle.kts
example/android/gradle/app/: build.gradle.kts
example/android/gradle/app/src/main/: AndroidManifest.xml
example/android/gradle/app/src/main/java/dev/gpui/mobile/: GpuiActivity.java  GpuiAuthActivity.java  GpuiCalendar.java  GpuiClipboard.java  GpuiContacts.java  GpuiInAppReview.java  GpuiLocalAuth.java  GpuiMapsLauncher.java  GpuiMediaSession.java  GpuiPermissionActivity.java  GpuiPickerActivity.java  GpuiPlatformView.java  GpuiVideoPlayer.java
example/android/gradle/app/src/main/res/values/: styles.xml
example/ios/: project.yml
example/src/: lib.rs
example/src/screens/: audio_player.rs  chat.rs  feed.rs  form.rs  home.rs  mod.rs  packages_demo.rs  swiper.rs  video_player.rs  webview_browser.rs
examples/: Cargo.toml  README.md  build.sh  build_and_run.sh
examples/android/gradle/: build.gradle.kts
examples/android/gradle/app/: build.gradle.kts  proguard-rules.pro
examples/android/gradle/app/src/main/: AndroidManifest.xml
examples/android/gradle/app/src/main/java/dev/gpui/mobile/: GpuiHelper.java
examples/android_app/: Cargo.toml  README.md
examples/android_app/gradle/: build.gradle.kts  gradle.properties  settings.gradle.kts
examples/android_app/gradle/app/: build.gradle.kts
examples/android_app/gradle/app/src/main/res/values/: strings.xml
examples/android_app/src/: lib.rs
examples/android_app/src/screens/: about.rs  counter.rs  home.rs  mod.rs
examples/ios/: Info.plist  gpui_ios.h  main.m  project.yml
examples/ios_app/: README.md  main.rs
examples/ios_app/xcode/: AppDelegate.swift  BridgingHeader.h  Info.plist
examples/src/: lib.rs  main.rs
examples/src/demos/: animation_playground.rs  mod.rs  shader_showcase.rs
examples/src/screens/: about.rs  components.rs  form.rs  home.rs  mod.rs  packages_demo.rs  settings.rs
src/: lib.rs  momentum.rs  target_platform.rs
src/android/: atlas.rs  display.rs  jni.rs  jni_entry.rs  jni_helpers.rs  mod.rs  platform.rs  platform_view.rs  renderer.rs  text.rs  window.rs
src/android/shaders/: shaders.wgsl  shaders_subpixel.wgsl
src/components/: mod.rs
src/components/material/: app_bar.rs  list_tile.rs  mod.rs  navigation_bar.rs  progress_indicator.rs  snackbar.rs  text_input.rs  theme.rs
src/components/shared/: stat_cards.rs
src/ios/: cg_types.rs  dispatcher.rs  display.rs  events.rs  ffi.rs  mod.rs  platform.rs  platform_view.rs  text_input.rs  text_system.rs  util.rs  window.rs
src/ios/demos/: animation_playground.rs  menu.rs  mod.rs  shader_showcase.rs
