[package]
name = "gpui-mobile"
version = "0.1.0"
edition = "2021"
authors = ["Balamurali Pandranki <balamurali@live.com>"]
license = "GPL-3.0-or-later OR AGPL-3.0-or-later OR Apache-2.0"
description = "Mobile platform support for GPUI — iOS (Metal/Blade) and Android (wgpu/Vulkan)"
repository = "https://github.com/itsbalamurali/gpui-mobile"
homepage = "https://github.com/itsbalamurali/gpui-mobile"
keywords = ["gui", "mobile", "ios", "android", "gpui"]
categories = ["gui", "os"]
readme = "README.md"

[features]
default = []
font-kit = ["dep:font-kit"]
android = []
ios = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# ── shared deps (all platforms) ──────────────────────────────────────────────

[dependencies]
anyhow       = "1"
log          = { version = "0.4", features = ["kv_unstable_serde", "serde"] }
parking_lot  = "0.12"
smallvec     = { version = "1.6", features = ["union", "const_new"] }
bytemuck     = "1"
raw-window-handle = "0.6"
futures      = "0.3"

# ── GPUI core crate (provides Platform trait, event types, geometry, etc.) ───
# Pulled from the Zed monorepo. Cargo resolves workspace-internal deps
# (collections, gpui_macros, refineable, scheduler, etc.) transitively.
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", default-features = false }

# ── iOS ──────────────────────────────────────────────────────────────────────

[target.'cfg(target_os = "ios")'.dependencies]
# Objective-C runtime
objc  = "0.2"
block = "0.1"

# Apple frameworks
core-foundation     = "0.10"
core-foundation-sys = "0.8"
core-graphics       = "0.24"
core-text           = "=21.0.0"
foreign-types       = "0.5"
uuid                = { version = "1", features = ["v5"] }

# wgpu renderer (Metal backend on iOS) — same crate used for Android
gpui_wgpu = { git = "https://github.com/zed-industries/zed", package = "gpui_wgpu", features = ["font-kit"] }
wgpu = { version = "28.0", default-features = false, features = ["wgsl", "metal"] }
pollster = "0.4"

# Text / font stack
pathfinder_geometry = "0.5"

# GCD dispatcher
async-task = "4.7"
env_logger = "0.11"

# Optional font-kit (same pin as gpui upstream)
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }

# ── Android ──────────────────────────────────────────────────────────────────

[target.'cfg(target_os = "android")'.dependencies]
# JNI / NDK bindings
jni         = "0.21"
ndk         = "0.9"
ndk-context = "0.1"
ndk-sys     = "0.6"

# Activity glue layer (replaces hand-rolled ANativeActivity_onCreate / JNI_OnLoad)
android-activity = { version = "0.6", features = ["native-activity"] }

# Logging to logcat
android_logger = "0.13"

# gpui_wgpu — wgpu renderer + cosmic-text system from the Zed repo
# This gives us WgpuRenderer, WgpuContext, WgpuAtlas, CosmicTextSystem
gpui_wgpu = { git = "https://github.com/zed-industries/zed", package = "gpui_wgpu", features = ["font-kit"] }

# wgpu — matches the version used by the Zed workspace (28.x)
wgpu = { version = "28.0", default-features = false, features = ["wgsl"] }

# Additional deps for the Android platform layer
cosmic-text  = "0.17.0"
etagere      = "0.2"
swash        = "0.2.6"
itertools    = "0.14"
profiling    = "1"
pollster     = "0.4"
collections  = { git = "https://github.com/zed-industries/zed", package = "collections" }
rustc-hash   = "2"
uuid         = { version = "1", features = ["v5"] }

# ── Shared iOS + Android pathing ─────────────────────────────────────────────

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
# Used by both platforms for clipboard, credential stubs, etc.

# ── dev ──────────────────────────────────────────────────────────────────────

[dev-dependencies]

# ── patch: match Zed's pinned forks ──────────────────────────────────────────
# These patches ensure that transitive deps from gpui/gpui_wgpu resolve
# the same forked versions that the Zed workspace uses.

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

# ── profiles ─────────────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
