[package]
name = "gpui-mobile"
version = "0.1.0"
edition = "2021"
authors = ["Balamurali Pandranki <balamurali@live.com>"]
license = "GPL-3.0-or-later OR AGPL-3.0-or-later OR Apache-2.0"
description = "Mobile platform support for GPUI — iOS (wpgu/Metal) and Android (wgpu/Vulkan)"
repository = "https://github.com/itsbalamurali/gpui-mobile"
homepage = "https://github.com/itsbalamurali/gpui-mobile"
keywords = ["gui", "mobile", "ios", "android", "gpui"]
categories = ["gui", "os"]
readme = "README.md"

[features]
default = ["url_launcher", "shared_preferences", "path_provider",
           "package_info", "device_info", "connectivity", "network_info", "vibration",
           "battery", "share", "sensors", "webview", "file_selector", "image_picker", "camera",
           "permission_handler"]
url_launcher = []
shared_preferences = []
path_provider = []
package_info = []
device_info = []
connectivity = []
network_info = []
vibration = []
battery = []
share = []
sensors = []
webview = []
file_selector = []
image_picker = []
camera = []
permission_handler = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# ── shared deps (all platforms) ──────────────────────────────────────────────

[dependencies]
anyhow       = "1"
log          = { version = "0.4", features = ["kv_unstable_serde", "serde"] }
parking_lot  = "0.12"
futures      = "0.3"
raw-window-handle = "0.6"

# ── GPUI core crate (provides Platform trait, event types, geometry, etc.) ───
gpui = { git = "https://github.com/zed-industries/zed", rev = "4dd42a0f77b11d0bed2a072919bcd9180b9a577c", package = "gpui", default-features = false }

# ── iOS ──────────────────────────────────────────────────────────────────────

[target.'cfg(target_os = "ios")'.dependencies]
# Objective-C runtime
objc = "0.2"

# Apple frameworks
core-foundation     = "0.10"
core-foundation-sys = "0.8"
core-graphics       = "0.25"
core-text           = "=21.0.0"
uuid                = { version = "1", features = ["v4", "v5"] }
block               = "0.1"

# wgpu renderer (Metal backend on iOS) — local fork from Zed with Android surface replacement
gpui_wgpu = { path = "crates/gpui_wgpu", features = ["font-kit"] }
wgpu = "28.0"

# Text / font stack
pathfinder_geometry = "0.5"
smallvec            = { version = "1.6", features = ["union", "const_new"] }

# font-kit (same pin as gpui upstream)
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed" }

# ── Android ──────────────────────────────────────────────────────────────────

[target.'cfg(target_os = "android")'.dependencies]
# JNI / NDK bindings
jni         = "0.22"
ndk         = "0.9"
ndk-context = "0.1"
ndk-sys     = "0.6"

# Activity glue layer
android-activity = { version = "0.6", features = ["native-activity"] }

# Logging to logcat
android_logger = "0.13"

# gpui_wgpu — local fork from Zed repo with Android surface replacement support
gpui_wgpu = { path = "crates/gpui_wgpu", features = ["font-kit"] }

# rustc-hash is required by the PlatformKeyboardMapper trait signature
rustc-hash = "2"
uuid       = { version = "1", features = ["v5"] }

# ── dev ──────────────────────────────────────────────────────────────────────

[dev-dependencies]

# ── patch: match Zed's pinned forks ──────────────────────────────────────────
# These patches ensure that transitive deps from gpui/gpui_wgpu resolve
# the same forked versions that the Zed workspace uses.

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

# ── profiles ─────────────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
