[package]
name = "gpui-mobile-example"
version = "0.1.0"
edition = "2021"
description = "Cross-platform GPUI example app for Android and iOS"
publish = false

[lib]
name = "gpui_mobile_example"
crate-type = ["cdylib", "staticlib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "gpui-example"
path = "src/main.rs"

[dependencies]
gpui-mobile = { path = ".." }
gpui = { git = "https://github.com/zed-industries/zed", rev = "56104fb17e6c5849900a4c282f42d1bfea294121", package = "gpui", default-features = false }
reqwest_client = { git = "https://github.com/zed-industries/zed", rev = "56104fb17e6c5849900a4c282f42d1bfea294121", package = "reqwest_client" }
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", package = "zed-reqwest", default-features = false, features = ["rustls-tls"] }
log = "0.4"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
android-activity = { version = "0.6", features = ["native-activity"] }

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
