[package]
name = "gpui-mobile-example"
version = "0.1.0"
edition = "2021"
description = "Cross-platform GPUI example app for Android and iOS"
publish = false

[lib]
name = "gpui_mobile_example"
crate-type = ["cdylib", "staticlib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "gpui-example"
path = "src/main.rs"

[dependencies]
gpui-mobile = { path = ".." }
gpui = { git = "https://github.com/zed-industries/zed", rev = "5688167d224b5eca54875d49afb8bfd73a07915a", package = "gpui", default-features = false }
reqwest_client = { git = "https://github.com/zed-industries/zed", rev = "5688167d224b5eca54875d49afb8bfd73a07915a", package = "reqwest_client" }
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", package = "zed-reqwest", default-features = false, features = ["rustls-tls"] }
log = "0.4"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
android-activity = { version = "0.6", features = ["native-activity"] }

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
