[package]
name = "collections"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Standard collection type re-exports used by Zed and GPUI"

[lib]
path = "src/collections.rs"
doctest = false

[features]
test-support = []

[dependencies]
indexmap = "2"
rustc-hash = "2"
