[package]
name = "gpui_wgpu"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
path = "src/gpui_wgpu.rs"

[features]
default = []
font-kit = ["dep:font-kit"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "4dd42a0f77b11d0bed2a072919bcd9180b9a577c", package = "gpui", default-features = false }
anyhow = "1"
bytemuck = "1"
collections = { path = "../collections" }
cosmic-text = "0.17.0"
etagere = "0.2"
itertools = "0.14.0"
log = { version = "0.4", features = ["kv_unstable_serde", "serde"] }
parking_lot = "0.12"
profiling = "1"
raw-window-handle = "0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
swash = "0.2.6"
gpui_util = { path = "../gpui_util" }
wgpu = "28.0"

# Optional: only needed on platforms with multiple font sources
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = "0.4.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.113"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
js-sys = "0.3"
